package gu.java.pattern.create.abstract_factory;

/**
 * 为一类产品对象声明一个接口
 */
public interface AbstractProductA {
}
