package gu.java.pattern.create.abstract_factory;

public interface AbstractProductB {
}
