package gu.java.pattern.create.abstract_factory;

/**
 * 定义一个将被具体工厂创建的对象
 * @author gudongxian
 * @create 2018-04-24 下午8:03
 **/
public class ProductA1 implements  AbstractProductA{
}
