package gu.java.pattern.create.abstract_factory;

/**
 * @author gudongxian
 * @create 2018-04-24 下午8:03
 **/
public class ProductB2 implements  AbstractProductB{
}
