@startuml

interface AbstractFactory{
    createProductA()
    createProductB()
}

class ConcreteFactory1
class ConcreteFactory2

interface AbstractProductA
interface AbstractProductB

class ProductA1
class ProductA2
class ProductB1
class ProductB2

class Client

AbstractFactory <|.. ConcreteFactory1
AbstractFactory <|.. ConcreteFactory2

AbstractProductA <|.. ProductA1
AbstractProductA <|.. ProductA2
AbstractProductB <|.. ProductB1
AbstractProductB <|.. ProductB2

AbstractFactory <-- Client
AbstractProductA <-- Client
AbstractProductB <-- Client

ProductA1 <.. ConcreteFactory1
ProductB1 <.. ConcreteFactory1
ProductA2 <.. ConcreteFactory2
ProductB2 <.. ConcreteFactory2

@enduml